Se realizo el ejercicio de la clase 2

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Javascript</title>
 </head>
 <body>
+    <!-- <script src="js/claseUno.js" type="text/javascript"></script> -->
+    <script src="js/claseDos.js" type="text/javascript"></script>
 
-    <script src="js/claseUno.js" type="text/javascript"></script>
+    
     
 </body>
 </html>
