--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Javascript</title>
 </head>
 <body>
-    <!-- <script src="js/claseUno.js" type="text/javascript"></script> -->
-    <script src="js/claseDos.js" type="text/javascript"></script>
+    <!-- <script src="js/claseUno.js" type="text/javascript"></script>
+    <script src="js/claseDos.js" type="text/javascript"></script> -->
+    <script src="js/claseTres.js" type="text/javascript"></script>
 
     
     
