Hice funciones para cargar, mostrar y eliminar un producto

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <!-- <script src="js/claseUno.js" type="text/javascript"></script>
-    <script src="js/claseDos.js" type="text/javascript"></script> -->
-    <script src="js/claseTres.js" type="text/javascript"></script>
+    <script src="js/claseDos.js" type="text/javascript"></script>
+    <script src="js/claseTres.js" type="text/javascript"></script> -->
+    <script src="js/claseCuatro.js" type="text/javascript"></script>
 
     
     
